--- a/Online-Shopping-Application/src/main/resources/application.properties
+++ b/Online-Shopping-Application/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8888
 spring.datasource.url=jdbc:mysql://localhost:3306/Online_Shopping_Application
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Vivek@123
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
